--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,16 +3,21 @@ body {
   text-align: center;
 }
 
+.btn.btn-primary {
+  border-radius: 0;
+  border: none;
+  background-color: $brand-primary;
+}
+
 /**
  * Clearfix
  */
 %clearfix {
-
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 
