--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,14 +2,11 @@
 layout: default
 ---
 
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
+<article class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12">
+      {{ content | markdownify}}
+    </div>
   </div>
 
   {% for section in page.sections %}
