--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,16 +1,39 @@
 <div class="container-fluid Home-content">
   <div class="row">
     <div class="col-sm-12">
-      <p>
-      Are you practicing safe sec? With hackers increasingly targeting healthcare providers, it’s never been more important to understand the security threats facing your organization.
-      </p>
-      <p>
-      The Archimedes MedSec 101 Conference, hosted by the University of Michigan’s Archimedes Center for Medical Device Security, is a 2-day educational workshop for medical device manufacturers, industry regulators, and healthcare providers to learn and speak frankly about medical device security threats and solutions.
-      </p>
+      <p class="lead">Are you practicing safe sec? With cyber attacks on the rise, it’s
+      critical to your patients and your business that you recognize the
+      security threats facing the healthcare industry and have a plan in place
+      to prevent them. The <strong>Archimedes Medical Security 101 Conference</strong>, hosted by
+      the University of Michigan’s Archimedes Center for Medical Device
+      Security, is a 2-day educational workshop for medical device
+      manufacturers, industry regulators, and healthcare providers to learn and
+      speak frankly about medical device security threats and solutions.</p>
+    </div>
+    <div class="col-sm-12">
+      <h3>Why Attend?</h3>
+      <p>Our events do not focus on the latest industry buzz or trendy new
+      product development. We want you to feel comfortable speaking freely about
+      your cybersecurity issues with trusted and respected professionals who can
+      help you establish best practices for improving medical device security in
+      your products and organizations. At Archimedes, we provide a secure forum
+      for you to learn about emerging issues pertaining to cybersecurity and
+      then we arm you with the knowledge to better protect both your clients and
+      patients.</p>
 
-      <p>
-      Register today for direct access to leading security experts who will teach you how to identify, prevent, and recover from cyber-security attacks so that you, your clients, and your patients can rest secure.
-      </p>
+      <p>Attendees from our previous conferences have included:</p>
+
+      <ul>
+        <li>Chief Information Security Officers</li>
+        <li>Directors of Product Engineering</li>
+        <li>System Engineers</li>
+        <li>VPs of Global Product Security</li>
+        <li>IT Security Managers</li>
+        <li>Physicians</li>
+        <li>Chairs of medical device security standards bodies</li>
+        <li>Security researchers</li>
+        <li>Front-line engineers from clinical facilities</li>
+      </ul>
     </div>
   </div>
 </div>
