--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,28 +18,9 @@
 
     <nav class="col-sm-8 hidden-sm-down">
       <div class="clearfix">
-        <ul class="list-inline Header-social-links">
-          <li class="list-inline-item">
-            <a href="https://twitter.com/{{site.twitter_username}}" class="ss-icon">
-              twitter
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="mailto:{{site.email}}" class="ss-icon">
-              mail
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="{{site.linkedin_username}}" class="ss-icon">
-              linkedin
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="{{site.youtube_channel}}" class="ss-icon">
-              youtube
-            </a>
-          </li>
-        </ul>
+        <h6 class="text-xs-right Banner-subtitle">
+          Jan 16 & 17, 2017, Orlando, Florida
+        </h6>
       </div>
       <div class="clearfix">
         <ul class="list-inline Header-nav">
