--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -1,26 +1,32 @@
 .Banner {
-  margin-bottom: 20px;
-  position: relative;
-}
-
-.Banner-img {
+  width: 100%;
+  height: 100%;
+  margin: 0 0 20px;
+  display: table;
 }
 
 .Banner-panel {
-  padding: 25px;
-  position: absolute;
-  z-index: 9;
-  background-color: rgba(white, 0.5);
+  height: 100%;
+  display: table-cell;
+  vertical-align: top;
+  float: none;
 
-  &.Banner-panel--events {
-    min-height: 200px;
-    top: 20px;
-    right: 36px;
+  &.Banner-panel--image {
+    width: 75%;
   }
 
-  &.Banner-panel--page {
-    bottom: 0;
+  &.Banner-panel--text {
+    width: 25%;
+    background-color: #d5e8ed;
+
+    > div {
+      padding: 25px;
+    }
   }
+}
+
+.Banner-img {
+  margin: 0;
 }
 
 .Banner-subtitle {
@@ -45,7 +51,5 @@
 }
 
 .Banner-cta-button {
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
+  margin-top: 14px;
 }
