Finish off base layout of homepage.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,15 @@
       <div class="col-sm-1">
         <img src="/images/umich-2color-transparentbg.png" width="56">
       </div>
-      <div class="col-sm-11 Footer-footnote">
+      <div class="col-sm-7 Footer-footnote">
         Archimedes is based at the University of Michigan Computer Science &
-        Engineering (c) {{ 'now' | date: "%Y" }}
+        Engineering © {{ 'now' | date: "%Y" }}<br>
+        Disney properties/artwork: ©Disney
+      </div>
+      <div class="col-sm-4">
+        <h4>
+          Jan 16 & 17, 2017<br>in Lake Buena Vista, FL
+        </h4>
       </div>
     </div>
   </div>
