--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,7 +1,10 @@
 <div class="container-fluid Home-content">
-  <div class="row">
-    <div class="col-sm-12">
-      <p class="lead">Are you practicing safe sec? With cyber attacks on the rise, it’s
+  <section class="row Home-section">
+    <div class="col-lg-6 Home-column">
+      <h4 class="Home-title">Are you practicing safe sec?</h4>
+      <p>
+      <img src="/images/safe-sec.jpg" class="img-fluid pull-md-left Home-section-img">
+      With cyber attacks on the rise, it’s
       critical to your patients and your business that you recognize the
       security threats facing the healthcare industry and have a plan in place
       to prevent them. The <strong>Archimedes Medical Security 101 Conference</strong>, hosted by
@@ -10,8 +13,9 @@
       manufacturers, industry regulators, and healthcare providers to learn and
       speak frankly about medical device security threats and solutions.</p>
     </div>
-    <div class="col-sm-12">
-      <h3>Why Attend?</h3>
+    <div class="hidden-lg-up clearfix"></div>
+    <div class="col-lg-6 Home-column">
+      <h4 class="Home-title">Why Attend?</h4>
       <p>Our events do not focus on the latest industry buzz or trendy new
       product development. We want you to feel comfortable speaking freely about
       your cybersecurity issues with trusted and respected professionals who can
@@ -32,8 +36,35 @@
         <li>Physicians</li>
         <li>Chairs of medical device security standards bodies</li>
         <li>Security researchers</li>
-        <li>Front-line engineers from clinical facilities</li>
+        <li>Front-line engineers from clinical facilities...</li>
       </ul>
+    </div>
+  </section>
+  <div class="row">
+    <div class="col-sm-12 text-xs-center Home-register">
+      <div class="row">
+        <div class="col-md-7 offset-md-1">
+          <h4 style="line-height: 49px">Join us this January 16 & 17, 2017 in Lake Buena Vista, FL</h4>
+        </div>
+        <div class="col-md-3">
+          <a class="btn btn-lg btn-primary" href="/register">Register Now</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="row">
+        <div class="col-sm-2">
+          <img src="/images/mike-ahmadi.jpg" class="img-fluid">
+        </div>
+        <blockquote class="blockquote col-sm-10">
+          <p>&quot;Sitting in a room full of the brightest minds in medicine and
+          security made me wonder if this is what it was like planning the first
+          Space Shuttle launch.&quot;</p>
+          <footer class="blockquote-footer">Mike Ahmadi, Director of Critical Systems Security - Software Integrity Group at Synopsys Inc</footer>
+        </blockquote>
+      </div>
     </div>
   </div>
 </div>
