Fix responsive features.

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="Banner">
     <div class="Banner-panel Banner-panel--image">
-      <img src="/images/banner.jpg" class="img-fluid Banner-img">
+      <img src="/images/banner.jpg" class="img-fluid Banner-img hidden-lg-up">
     </div>
     {% if include.url == '/' %}
       {% assign banner_height = 510 %}
