--- a/_includes/home.html
+++ b/_includes/home.html
@@ -36,7 +36,7 @@
         <li>Physicians</li>
         <li>Chairs of medical device security standards bodies</li>
         <li>Security researchers</li>
-        <li>Front-line engineers from clinical facilities...</li>
+        <li>Front-line engineers from clinical facilities</li>
       </ul>
     </div>
   </section>
@@ -44,7 +44,7 @@
     <div class="col-sm-12 text-xs-center Home-register">
       <div class="row">
         <div class="col-md-7 offset-md-1">
-          <h4 style="line-height: 49px">Join us this January 16 & 17, 2017 in Lake Buena Vista, FL</h4>
+          <h4 style="line-height: 49px;margin:0">Join us this January 16 & 17, 2017 in Lake Buena Vista, FL</h4>
         </div>
         <div class="col-md-3">
           <a class="btn btn-lg btn-primary" href="/register">Register Now</a>
