--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -7,7 +7,7 @@
       {% assign banner_height = 510 %}
       <div class="Banner-panel Banner-panel--text">
         <div>
-          <h1 class="Banner-title">Medical Security 101 Conference</h1>
+          <h1 class="Banner-title">{{site.title}}</h1>
           <h4 class="Banner-location-text">Improve your medical device security with advice from the experts</h4>
           {% include
             button.html
