--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
       </div>
       <div class="col-sm-4">
         <h4>
-          Jan 16 & 17, 2017<br>in Lake Buena Vista, FL
+          {{site.conference_dates}}<br>{{site.conference_location}}
         </h4>
       </div>
     </div>
