--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     <nav class="col-sm-12 col-md-8">
       <div class="clearfix">
         <h6 class="text-md-right text-sm-center text-xs-center Header-subtitle">
-          Jan 16 & 17, 2017, Lake Buena Vista, FL
+          {{site.conference_dates}}, {{site.conference_location}}
           <a href="/register" class="btn btn-primary btn-sm">
             Register now
           </a>
