--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,19 +3,23 @@
     <div class="col-lg-6 Home-column">
       <h4 class="Home-title">Are you practicing safe sec?</h4>
       <p>
-      <img src="/images/safe-sec.jpg" class="img-fluid pull-md-left Home-section-img">
-      With cyber attacks on the rise, it’s
-      critical to your patients and your business that you recognize the
-      security threats facing the healthcare industry and have a plan in place
-      to prevent them. The <strong>Archimedes Medical Security 101 Conference</strong>, hosted by
+      <img src="/images/safe-sec.jpg" class="img-fluid pull-sm-left Home-section-img">
+      With cyber attacks on the rise, it’s critical to your patients and your
+      business that you recognize the security threats facing the healthcare
+      industry and have a plan in place to prevent them.
+      </p>
+      <p>The <strong>{{site.conference_name}}</strong>, hosted by
       the University of Michigan’s Archimedes Center for Medical Device
       Security, is a 2-day educational workshop for medical device
       manufacturers, industry regulators, and healthcare providers to learn and
       speak frankly about medical device security threats and solutions.</p>
+      <p><a href="/register">Register today for direct access to leading security experts</a> who will
+      teach you how to identify, prevent, and recover from cybersecurity attacks
+      so that you, your clients, and your patients can rest secure.</p>
     </div>
     <div class="hidden-lg-up clearfix"></div>
     <div class="col-lg-6 Home-column">
-      <h4 class="Home-title">Why Attend?</h4>
+      <h4 class="Home-title">Why attend?</h4>
       <p>Our events do not focus on the latest industry buzz or trendy new
       product development. We want you to feel comfortable speaking freely about
       your cybersecurity issues with trusted and respected professionals who can
@@ -44,7 +48,9 @@
     <div class="col-sm-12 text-xs-center Home-register">
       <div class="row">
         <div class="col-md-7 offset-md-1">
-          <h4 style="line-height: 49px;margin:0">Join us this January 16 & 17, 2017 in Lake Buena Vista, FL</h4>
+          <h4 style="line-height: 49px;margin:0">
+            Join us this {{site.conference_dates}} in {{site.conference_location}}
+          </h4>
         </div>
         <div class="col-md-3">
           <a class="btn btn-lg btn-primary" href="/register">Register Now</a>
