Finish speakers layout.

--- a/_layouts/speakers.html
+++ b/_layouts/speakers.html
@@ -12,14 +12,18 @@ layout: default
     {% assign speakers = site.speakers | sort: 'position' %}
     {% for speaker in speakers %}
       {% assign clear_row = forloop.index | modulo: 2 %}
-      <div class="col-md-6 col-lg-6">
-        <img src="http://placehold.it/1110x600" class="img-fluid">
-        <h6>
-          {{ speaker.title }}
-        </h6>
-        <p>
-          {{ speaker.credentials_text | markdownify }}
-        </p>
+      <div class="col-md-6 col-lg-6 Speaker">
+        <div class="Speaker-header">
+          <img src="http://placehold.it/1110x600" class="img-fluid">
+          <div class="Speaker-title">
+            <div>
+              {{ speaker.title }}
+            </div>
+            <div>
+              {{ speaker.credentials_text | markdownify }}
+            </div>
+          </div>
+        </div>
         {{ speaker.content | markdownify }}
       </div>
       {% if clear_row == 0 %}
