--- a/css/main.scss
+++ b/css/main.scss
@@ -67,4 +67,5 @@ $on-laptop:        800px;
         "home",
         "callout",
         "about",
-        "events";
+        "events",
+        "speakers";
