fix schedule ordering and nesting.

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -22,7 +22,7 @@
             class="Banner-cta-button"
           %}
         {% else %}
-          <h1 class="Banner-title">{{page.title}}</h1>
+          <h1 class="Banner-title">{{page.banner_title}}</h1>
           <h4 class="Banner-subtitle">{{page.subtitle}}</h4>
           {% if page.cta_link %}
             {% include
