--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -18,12 +18,12 @@ layout: default
       <div>{{presentation.relative_directory}}</div>
         <header class="col-sm-12">
           <div class="row">
-            <div class="col-xs-3">
+            <div class="col-xs-4">
               <h6>
                 {{day.presentation_date | date_to_string }}
               </h6>
             </div>
-            <div class="col-xs-9">
+            <div class="col-xs-8">
               <h6>{{day.title}}</h6>
             </div>
           </div>
@@ -31,20 +31,22 @@ layout: default
         {{day}}
 
         {% for presentation in blocks %}
-          <div class="col-sm-12">
+          <div class="col-sm-12 {% if presentation.is_break %}bg-info{% endif %}">
             <div class="row">
-              <div class="col-sm-3">
+              <div class="col-sm-2">
                 {{presentation.time}}
               </div>
-              <div class="col-sm-9">
+              <div class="col-sm-2">
+                {% if presentation.speaker %}
+                  <div>
+                    {{presentation.speaker}}
+                  </div>
+                {% endif %}
+              </div>
+              <div class="col-sm-8">
                 {{presentation.title}}
 
                 {% if presentation.content %}
-                  {% if presentation.speakers %}
-                    <h5>
-                      Speaker: {{presentation.speakers}}
-                    </h5>
-                  {% endif %}
                   {{ presentation.content | markdownify }}
                 {% endif %}
               </div>
