Add better styles for the sections and load external speaker.

--- a/css/main.scss
+++ b/css/main.scss
@@ -68,4 +68,5 @@ $on-laptop:        800px;
         "callout",
         "about",
         "events",
-        "speakers";
+        "speakers",
+        "schedule";
