--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+{% assign speakers = site.speakers %}
 {% assign presentations = site.presentations | sort: 'position' %}
 {% assign days = site.presentations | sort: 'position' | where: 'is_day', 'true' %}
 
@@ -15,37 +15,53 @@ layout: default
     {% for day in days %}
       {% assign day_index = forloop.index %}
       {% assign blocks = presentations | where: 'day', day_index %}
+
       <div>{{presentation.relative_directory}}</div>
-        <header class="col-sm-12">
+        <header class="col-sm-12 Day">
           <div class="row">
             <div class="col-xs-4">
-              <h6>
+              <h3 class="Day-date">
                 {{day.presentation_date | date_to_string }}
-              </h6>
+              </h3>
             </div>
             <div class="col-xs-8">
-              <h6>{{day.title}}</h6>
+              <h3 class="Day-title">{{day.title}}</h3>
+            </div>
+            <div class="col-sm-12">
+              <hr/>
             </div>
           </div>
         </header>
         {{day}}
 
         {% for presentation in blocks %}
-          <div class="col-sm-12 {% if presentation.is_break %}bg-info{% endif %}">
+          {% assign speaker = speakers | where_exp: 'item', 'item.title
+          contains presentation.speaker' | first %}
+          <div class="
+            col-sm-12
+            Schedule-block
+            {% if presentation.is_break %}
+               Schedule-block--break
+            {% endif %}">
             <div class="row">
               <div class="col-sm-2">
                 {{presentation.time}}
               </div>
               <div class="col-sm-2">
-                {% if presentation.speaker %}
-                  <div>
-                    {{presentation.speaker}}
-                  </div>
+                {% if speaker %}
+                  <img src="http://placehold.it/200x200" class="img-fluid">
                 {% endif %}
               </div>
               <div class="col-sm-8">
-                {{presentation.title}}
-
+                <h5 class="Schedule-presentation-title {% if
+                  presentation.is_break %}Schedule-presentation-title--break{% endif %}">
+                  {{presentation.title}}
+                </h5>
+                {% if speaker %}
+                <h6>
+                  {{speaker.title}}
+                </h6>
+                {% endif %}
                 {% if presentation.content %}
                   {{ presentation.content | markdownify }}
                 {% endif %}
@@ -53,7 +69,9 @@ layout: default
             </div>
           </div>
         {% endfor %}
-
+        <div class="col-sm-12">
+          <hr class="Schedule-divider clearfix"/>
+        </div>
     {% endfor %}
   </section>
 </div>
