--- a/_layouts/speakers.html
+++ b/_layouts/speakers.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
@@ -14,7 +13,7 @@ layout: default
       {% assign clear_row = forloop.index | modulo: 2 %}
       <div class="col-md-6 col-lg-6 Speaker">
         <div class="Speaker-header">
-          <img src="http://placehold.it/1110x600" class="img-fluid">
+          <img src="{{speaker.speaker_image}}" class="img-fluid">
           <div class="Speaker-title">
             <div>
               {{ speaker.title }}
