Finish speaker layout.

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -18,7 +18,7 @@
           {% include
             button.html
             label="Register Now"
-            href="/schedule"
+            href="https://www.eventbrite.com/e/medical-device-security-101-conference-tickets-27465381696"
             class="Banner-cta-button"
           %}
         {% else %}
