--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       <div class="clearfix">
         <h6 class="text-md-right text-sm-center text-xs-center Header-subtitle">
           {{site.conference_dates}}, {{site.conference_location}}
-          <a href="/register" class="btn btn-primary btn-sm">
+          <a href="https://www.eventbrite.com/e/medical-device-security-101-conference-tickets-27465381696" class="btn btn-primary btn-sm">
             Register now
           </a>
         </h6>
