--- a/_includes/home.html
+++ b/_includes/home.html
@@ -8,12 +8,12 @@
       business that you recognize the security threats facing the healthcare
       industry and have a plan in place to prevent them.
       </p>
-      <p>The <strong>{{site.conference_name}}</strong>, hosted by
-      the University of Michigan’s Archimedes Center for Medical Device
-      Security, is a 2-day educational workshop for medical device
+      <p>The <strong>Medical Device Security 101 Conference</strong>, hosted by
+      the University of Michigan’s <a href="https://www.secure-medicine.org/">Archimedes Center for Medical Device
+        Security</a>, is a 2-day educational workshop for medical device
       manufacturers, industry regulators, and healthcare providers to learn and
       speak frankly about medical device security threats and solutions.</p>
-      <p><a href="/register">Register today for direct access to leading security experts</a> who will
+      <p><a href="https://www.eventbrite.com/e/medical-device-security-101-conference-tickets-27465381696">Register today for direct access to leading security experts</a> who will
       teach you how to identify, prevent, and recover from cybersecurity attacks
       so that you, your clients, and your patients can rest secure.</p>
     </div>
@@ -24,7 +24,7 @@
       product development. We want you to feel comfortable speaking freely about
       your cybersecurity issues with trusted and respected professionals who can
       help you establish best practices for improving medical device security in
-      your products and organizations. At Archimedes, we provide a secure forum
+      your products and organizations. At Archimedes, we provide a forum
       for you to learn about emerging issues pertaining to cybersecurity and
       then we arm you with the knowledge to better protect both your clients and
       patients.</p>
@@ -53,7 +53,8 @@
           </h4>
         </div>
         <div class="col-md-3">
-          <a class="btn btn-lg btn-primary" href="/register">Register Now</a>
+          <a class="btn btn-lg btn-primary"
+            href="https://www.eventbrite.com/e/medical-device-security-101-conference-tickets-27465381696">Register Now</a>
         </div>
       </div>
     </div>
