Add the newsletter page.

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -11,7 +11,7 @@ $footer-text: rgba(white, 0.5);
   background-color: $text-color;
 
   a {
-    color: $footer-text;
+    color: white;
   }
 }
 
@@ -37,6 +37,5 @@ $footer-text: rgba(white, 0.5);
 }
 
 .Footer-footnote {
-  margin-top: 15px;
   font-size: 14px;
 }
