--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,15 +4,28 @@
       <div class="col-sm-1">
         <img src="/images/umich-2color-transparentbg.png" width="56">
       </div>
-      <div class="col-sm-7 Footer-footnote">
-        Archimedes is based at the University of Michigan Computer Science &
-        Engineering © {{ 'now' | date: "%Y" }}<br>
-        Disney properties/artwork: ©Disney
+      <div class="col-sm-4 Footer-footnote">
+        <p>
+          Archimedes is based at the University of Michigan Computer Science &
+          Engineering © {{ 'now' | date: "%Y" }}<br>
+          Disney properties/artwork: ©Disney
+        </p>
+
+      </div>
+      <div class="col-sm-3">
+        <p>
+        Play it safe. Stay informed.<br/>
+        <a href="/newsletter">Sign up to our newsletter</a> for monthly news, research, and interviews.
+        </p>
       </div>
       <div class="col-sm-4">
         <h4>
           {{site.conference_dates}}<br>{{site.conference_location}}
         </h4>
+        <p>
+          For questions about our event email <a
+            href="mailto:archimedes@umich.edu">archimedes@umich.edu</a><br/>
+        </p>
       </div>
     </div>
   </div>
