--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
       </div>
     </div>
     {% include footer.html %}
+    <script src="/js/jquery-3.1.1.min.js"></script>
+    <script src="/js/util.js"></script>
+    <script src="/js/modal.js"></script>
   </body>
-
 </html>
